--- a/PruebaTecnica1/pom.xml
+++ b/PruebaTecnica1/pom.xml
@@ -58,10 +58,10 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-    		<groupId>io.jsonwebtoken</groupId>
-    		<artifactId>jjwt-api</artifactId>
-    		<version>0.11.2</version>
-		</dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.0</version>
+        </dependency>
 	</dependencies>
 
 	<build>
