--- a/PruebaTecnica1/src/main/resources/application.properties
+++ b/PruebaTecnica1/src/main/resources/application.properties
@@ -1,1 +1,22 @@
+#Configuracion del datasource con H2 emulator
+spring.h2.console.enabled=true
+spring.h2.console.path=/user_db
 
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=root
+spring.datasource.password=root
+
+#Configuraciones JPA
+spring.jpa.open-in-view=true
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.defer-datasource-initialization=true
+
+#Puerto del servidor Tomcat
+server.port=8181
+
+#Spring Security
+spring.security.user.name=root
+spring.security.user.password=root
+spring.security.user.roles=admin
